--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "build": "craco build",
     "test": "react-scripts test",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "commit": "cz",
+    "lint": "eslint ."
   },
   "eslintConfig": {
     "extends": [
